front: use a new component navigation-items to manage styles in it.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -6,9 +6,7 @@
   ></app-header>
 
   <mat-sidenav #sidenav position="end">
-    <span>Article</span>
-    <span>Thèmes</span>
-    <mat-icon>account_circle</mat-icon>
+    <app-navigation-items></app-navigation-items>
   </mat-sidenav>
 
   <div class="main-content">
