--- a/front/src/app/mdd/components/subject/subjects/subjects.component.html
+++ b/front/src/app/mdd/components/subject/subjects/subjects.component.html
@@ -2,7 +2,8 @@
   <h2>Subjects</h2>
   <ul>
     <li *ngFor="let subject of subjects" class="subject-item">
-      <span>{{ subject.name }}</span>
+      {{ subject.name }} <br />{{ subject.description }}
+
       <div class="buttons">
         <button (click)="onSubjectDetail(subject.id)">Detail</button>
         <button
