front: format csv and html for subjects and subject item

--- a/front/src/app/mdd/components/subject/subject-list-item/subject-list-item.component.html
+++ b/front/src/app/mdd/components/subject/subject-list-item/subject-list-item.component.html
@@ -1,1 +1,15 @@
-<p>subject-list-item works!</p>
+<mat-card class="subject-card">
+  <!-- <mat-card-header class="subject-header"> -->
+  <mat-card-title>
+    <span>{{ subject.name | titlecase }}</span>
+  </mat-card-title>
+  <!-- </mat-card-header> -->
+
+  <mat-card-content class="subject-description">
+    <span>{{ subject.description }}</span>
+  </mat-card-content>
+
+  <button type="submit" mat-raised-button color="primary" (click)="Subscribe()">
+    Créer un article
+  </button>
+</mat-card>
