--- a/front/src/app/mdd/components/article/articleform/articleform.component.scss
+++ b/front/src/app/mdd/components/article/articleform/articleform.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: flex-start;
   height: 100vh;
-  width: 300px;
+  width: 600px;
 
   padding: 20px 0; // Ajoutez un padding pour un peu d'espace en haut et en bas.
 }
@@ -12,7 +12,6 @@
 h2 {
   text-align: left;
   width: 80%; /* Utilisez la même largeur que votre champ de saisie pour l'alignement. */
-  //max-width: 500px; /* Et la même largeur maximale. */
 }
 
 .input-field {
@@ -24,4 +23,14 @@ h2 {
 .create-button {
   width: 40%;
   max-width: 250px;
+}
+
+@media (max-width: 500px) {
+  .article-form-container {
+    width: 300px;
+  }
+}
+
+textarea {
+  height: 200px; /* ou la hauteur que vous voulez */
 }
