--- a/front/src/app/mdd/components/article/articleform/articleform.component.html
+++ b/front/src/app/mdd/components/article/articleform/articleform.component.html
@@ -1,3 +1,8 @@
+<!-- Ajoute le lien vers le HomeComponent -->
+<a routerLink="/mdd/article">
+  <mat-icon class="back-icon">keyboard_backspace</mat-icon>
+</a>
+
 <form
   (ngSubmit)="onCreateArticle(articleForm)"
   #articleForm="ngForm"
