--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-card (click)="showArticleDetails(article)" class="article-card">
+<mat-card (click)="showArticleDetails()" class="article-card">
   <!-- <mat-card-header class="article-header"> -->
   <mat-card-title>
     <span>{{ article.title | titlecase }}</span>
