front: apply the buble up pattern so the shared message component can be added from article detail component.

--- a/front/src/app/mdd/components/article/article-detail/article-detail.component.html
+++ b/front/src/app/mdd/components/article/article-detail/article-detail.component.html
@@ -1,1 +1,35 @@
-<p>article-detail works!</p>
+<div *ngIf="article$ | async as article; else loadingTemplate">
+  <h2>Subject Details</h2>
+  <div>
+    <mat-card class="article-detail-card">
+      <!-- <mat-card-header class="article-header"> -->
+      <mat-card-title>
+        <span>{{ article.title | titlecase }}</span>
+      </mat-card-title>
+
+      <mat-card-subtitle class="date">
+        <span>{{ article.publishedAt | date }}</span>
+      </mat-card-subtitle>
+
+      <mat-card-subtitle class="author">
+        <span>{{ article.userId }}</span>
+      </mat-card-subtitle>
+      <!-- </mat-card-header> -->
+
+      <mat-card-content>
+        <span class="article-content">{{ article.content }}</span>
+      </mat-card-content>
+      <mat-card-actions>
+        <app-comments
+          [comments]="article.comments"
+          (newComment)="handleNewComment($event)"
+        ></app-comments>
+      </mat-card-actions>
+    </mat-card>
+    <!-- Add more details as needed -->
+  </div>
+</div>
+
+<ng-template #loadingTemplate>
+  <p>Loading...</p>
+</ng-template>
