--- a/front/src/app/shared/components/comments/comments.component.html
+++ b/front/src/app/shared/components/comments/comments.component.html
@@ -1,21 +1,29 @@
-<div class="comments-row">
-  <mat-form-field>
-    <input
-      type="text"
-      matInput
-      placeholder="Ajouter un commentaire..."
-      [formControl]="commentCtrl"
-    />
-  </mat-form-field>
-  <button mat-icon-button color="primary" (click)="onLeaveComment()">
-    <mat-icon>send</mat-icon>
-  </button>
-</div>
+<div class="comments-container">
+  <mat-list *ngIf="comments.length">
+    <mat-card-subtitle class="title"> Commentaires </mat-card-subtitle>
+    <mat-list-item *ngFor="let comment of comments">
+      <div class="comment-list">
+        <div class="comment-info">
+          <span>{{ comment.userId }}</span>
+          <span class="date">{{ comment.createdAt | date }}</span>
+        </div>
+        <mat-card class="comment-content">
+          <span
+            mat-line
+            [innerHTML]="comment.content.split('\n').join('<br>')"
+          ></span>
+        </mat-card>
+      </div>
+    </mat-list-item>
+  </mat-list>
 
-<mat-list *ngIf="comments.length">
-  <h2 matSubheader>Commentaires</h2>
-  <mat-list-item *ngFor="let comment of comments">
-    <span mat-line>{{ comment.content }}></span>
-    <span mat-line>{{ comment.createdAt | date }}</span>
-  </mat-list-item>
-</mat-list>
+  <div class="new-comment-row">
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Ajouter un commentaire...</mat-label>
+      <textarea matInput [formControl]="commentCtrl" rows="4"></textarea>
+    </mat-form-field>
+    <button mat-icon-button color="primary" (click)="onLeaveComment()">
+      <mat-icon>send</mat-icon>
+    </button>
+  </div>
+</div>
