--- a/front/src/app/mdd/components/article/article-detail/article-detail.component.html
+++ b/front/src/app/mdd/components/article/article-detail/article-detail.component.html
@@ -1,3 +1,8 @@
+<!-- Ajoute le lien vers le HomeComponent -->
+<a routerLink="/mdd/article">
+  <mat-icon class="back-icon">keyboard_backspace</mat-icon>
+</a>
+
 <div>
   <div *ngIf="article$ | async as article; else loadingTemplate">
     <div class="article-detail-container">
