front: make the article detail component responsive

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .main-content {
   box-sizing: border-box; // Change la manière dont les propriétés de dimensionnement (comme la largeur et la hauteur) sont mesurées pour inclure le padding et les bordures, et non le contenu seul.
-  padding: 20px; // Ajoute un espace interne de 20px tout autour du contenu.
+  padding: 30px; // Ajoute un espace interne de 20px tout autour du contenu.
   //max-width: 800px; // La largeur maximale de l'élément est limitée à 800px.
   margin: auto; // Centre l'élément horizontalement dans son conteneur.
 
@@ -17,9 +17,9 @@
 
   // background-color: #eae1ae; // Color le fond pour facilité le développement
 
-  @media (max-width: 500px) {
-    padding: 0px; // Supprime l'espace avec le header pour les petits écrans
-  }
+  // @media (max-width: 500px) {
+  //   padding: 0px; // Supprime l'espace avec le header pour les petits écrans
+  // }
 }
 
 mat-sidenav {
