--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -4,27 +4,14 @@
     <div class="login-rows">
       <p>
         <mat-form-field appearance="outline">
-          <mat-label>Nom d'utilisateur</mat-label>
+          <mat-label>E-mail ou nom d'utilisateur</mat-label>
           <input
             matInput
-            placeholder="Entrez votre nom"
+            placeholder="Entrez votre e-mail ou nom d'utilisateur"
             type="text"
-            id="username"
-            formControlName="username"
-            #usernameInput
-          />
-        </mat-form-field>
-      </p>
-
-      <p>
-        <mat-form-field appearance="outline">
-          <mat-label>Adresse e-mail</mat-label>
-          <input
-            matInput
-            placeholder="Entrez votre e-mail"
-            type="email"
-            id="email"
-            formControlName="email"
+            id="emailOrUserName"
+            formControlName="emailOrUserName"
+            #emailOrUserNameInput
           />
         </mat-form-field>
       </p>
@@ -47,7 +34,7 @@
           type="submit"
           mat-raised-button
           color="primary"
-          (click)="createUser()"
+          (click)="submit()"
           [disabled]="loginForm.invalid"
         >
           S'inscrire
