--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -9,9 +9,9 @@
             matInput
             placeholder="Entrez votre e-mail ou nom d'utilisateur"
             type="text"
-            id="emailOrUserName"
-            formControlName="emailOrUserName"
-            #emailOrUserNameInput
+            id="email"
+            formControlName="email"
+            #email
           />
         </mat-form-field>
       </p>
