--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.scss
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.scss
@@ -1,79 +1,35 @@
-.article-detail-card {
+.article-card {
+  background-color: #f5f5f5; /* Gris léger. Ajustez la couleur selon vos besoins */
+
+  cursor: pointer;
+
   display: grid;
-  gap: 16px; // Espace entre les lignes
+  grid-template-rows: auto auto auto;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px; /* Espacement entre les rangées. Ajustez selon vos besoins */
   grid-template-areas:
-    "title"
-    "metadata"
-    "content"
-    "comments-title"
-    "comments-list"
-    "new-comment";
-
-  // Spécifiez la largeur et d'autres styles pour la carte selon vos besoins
-  width: 100%;
-  max-width: 800px; // Vous pouvez ajuster cette valeur comme vous le souhaitez
-  padding: 16px;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    "title title"
+    "date author"
+    "content content";
 }
 
-.mat-card-title {
+mat-card-title {
   grid-area: title;
-  font-size: 24px;
-  margin-bottom: 8px;
 }
 
-.date,
-.author,
-.theme {
-  display: flex;
-  flex-direction: column;
+.date {
+  grid-area: date;
 }
 
-.metadata {
-  grid-area: metadata;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr; // Divise en trois colonnes égales
-  gap: 16px;
+.author {
+  grid-area: author;
 }
 
-.mat-card-content {
+mat-card-content {
   grid-area: content;
-  position: relative;
-
-  &:after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: #e0e0e0;
-    position: absolute;
-    bottom: -16px; // Ajustez selon vos besoins
-    left: 0;
-  }
 }
 
-.comments-title {
-  grid-area: comments-title;
-  font-size: 20px;
-  margin-top: 16px;
-}
-
-.comments-list {
-  grid-area: comments-list;
-}
-
-.new-comment {
-  grid-area: new-comment;
-  display: flex;
-  align-items: center;
-
-  mat-form-field {
-    flex-grow: 1;
-  }
-
-  button {
-    margin-left: 8px;
-  }
+mat-card-subtitle {
+  margin: 0; /* ou une autre valeur selon vos besoins */
+  padding: 0;
 }
