--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <h2>Inscription</h2>
+  <h2>Se connecter</h2>
   <form [formGroup]="loginForm" class="login-form">
     <div class="login-rows">
       <p>
