--- a/front/src/app/auth/components/login/login.component.scss
+++ b/front/src/app/auth/components/login/login.component.scss
@@ -5,39 +5,45 @@
 .login-container {
   display: flex;
   flex-direction: column;
+  //justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 500px; // Ou la largeur maximale que vous souhaitez pour le formulaire
+  //max-width: 500px; // Ou la largeur maximale que vous souhaitez pour le formulaire
   margin: 0 auto; // Centrer le conteneur par rapport à l'écran
   //margin-top: 2rem; // Ajoutez une marge en dessous du titre pour l'espacement
-}
+  //background-color: #e07272; /* couleur de fond temporaire pour le dépannage */
 
-/* Style pour le formulaire */
-.login-form {
-  width: 100%; // Prendre toute la largeur du conteneur .login-container
-
-  mat-form-field {
-    width: 350px; // Cela prendra toute la largeur disponible de son conteneur parent
+  /* Style pour le titre */
+  h2 {
+    margin-bottom: 2rem; // Ajoutez une marge en dessous du titre pour l'espacement
   }
 
-  .login-rows {
-  }
-
-  /* Centre le bouton S'inscrire */
-  .button-group {
+  /* Style pour le formulaire */
+  .login-form {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center; // Centrer les éléments enfants horizontalement
+    //justify-content: center; // Centrer les éléments enfants verticalement
 
-    button {
-      width: 150px; // Définir la largeur souhaitée pour le bouton
-      text-align: center; // Pour vous assurer que le texte du bouton reste centré
+    //background-color: #469b88; /* couleur de fond temporaire pour le dépannage */
+
+    width: 100%; // Prendre toute la largeur du conteneur .login-container
+
+    mat-form-field {
+      width: 350px;
+    }
+
+    /* Centre le bouton S'inscrire */
+    .button-group {
+      display: flex;
+      justify-content: center;
+
+      button {
+        width: 150px; // Définir la largeur souhaitée pour le bouton
+        text-align: center; // Pour vous assurer que le texte du bouton reste centré
+      }
     }
   }
-}
-
-/* Style pour le titre */
-h2 {
-  margin-bottom: 2rem; // Ajoutez une marge en dessous du titre pour l'espacement
 }
 
 /* Lien de retour en page d'accueil - positionnement par défaut */
@@ -45,10 +51,15 @@ h2 {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 10px; // Pour donner un peu d'espace autour du lien
-  z-index: 10; // Assurez-vous qu'il apparaît au-dessus des autres éléments
+  font-size: $back-arrow-font-size;
+  line-height: 18px;
+  z-index: 10;
+  padding: 20px; // Améliore la zone cliquable
+  padding-top: 20px;
+  padding-left: 30px;
+  border-radius: 50%; // Rend le padding circulaire, ce qui est bon pour les icônes
+  transition: background-color 0.3s ease; // Transition pour le feedback au survol
 }
-
 /* Lorsque la largeur de l'écran est supérieure à 500px */
 @media (min-width: 501px) {
   .back-icon {
@@ -61,17 +72,4 @@ h2 {
   .back-icon {
     top: 0; // Positionne le lien au-dessus du header
   }
-}
-
-.back-icon {
-  font-size: $back-arrow-font-size;
-  line-height: 18px;
-  z-index: 10;
-
-  // Améliorations
-  padding: 20px; // Améliore la zone cliquable
-  padding-top: 20px;
-  padding-left: 30px;
-  border-radius: 50%; // Rend le padding circulaire, ce qui est bon pour les icônes
-  transition: background-color 0.3s ease; // Transition pour le feedback au survol
 }
