--- a/front/src/app/mdd/components/article/articleform/articleform.component.scss
+++ b/front/src/app/mdd/components/article/articleform/articleform.component.scss
@@ -5,16 +5,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
-  width: 500px;
+  //justify-content: flex-start;
+  //height: 100vh;
+  //width: 450px;
+  width: 100%; // Prendre toute la largeur du conteneur .register-container
+  margin: 0 auto; // Centrer le conteneur par rapport à l'écran
 
-  padding: 20px 0; // Ajoutez un padding pour un peu d'espace en haut et en bas.
-}
-
-h2 {
-  text-align: left;
-  width: 80%; /* Utilisez la même largeur que votre champ de saisie pour l'alignement. */
+  padding: 10px 0; // Ajoutez un padding pour un peu d'espace en haut et en bas.
+  background-color: #e07272; /* couleur de fond temporaire pour le dépannage */
 }
 
 .input-field {
@@ -30,8 +28,8 @@ h2 {
 
 @media (max-width: 500px) {
   .article-form-container {
-    width: 450px;
-    margin-top: 30px; /* ou la valeur que vous souhaitez */
+    //width: 300px;
+    margin-top: 20px; /* ou la valeur que vous souhaitez */
   }
 }
 
@@ -56,23 +54,3 @@ textarea {
     left: 20px;
   }
 }
-
-// /* Lorsque la largeur de l'écran est supérieure à 500px */
-// @media (min-width: 501px) {
-//   .back-icon {
-//     top: $header-height + 1; // Déplacez le lien juste en dessous du header (adaptez ce chiffre en fonction de la hauteur de votre header)
-//   }
-// }
-
-// .back-icon {
-//   font-size: 42px;
-//   line-height: 18px;
-//   z-index: 10;
-
-//   // Améliorations
-//   padding: 20px; // Améliore la zone cliquable
-//   padding-top: 20px;
-//   padding-left: 30px;
-//   border-radius: 50%; // Rend le padding circulaire, ce qui est bon pour les icônes
-//   transition: background-color 0.3s ease; // Transition pour le feedback au survol
-// }
